# wallet-core

./: .gitignore  Cargo.toml  README.md
docs/: crates.js  overview.md  search-index.js  settings.html  source-files.js
docs/wallet_core/: all.html  index.html  sidebar-items.js  type.Result.html
docs/wallet_core/account/: enum.RemainderValueStrategy.html  index.html  sidebar-items.js  struct.Account.html  struct.AccountOptions.html  struct.AddressGenerationOptions.html  struct.TransferOptions.html  struct.TransferOutput.html
docs/wallet_core/account/builder/: index.html  sidebar-items.js  struct.AccountBuilder.html
docs/wallet_core/account/constants/: constant.ACCOUNT_ID_PREFIX.html  constant.DEFAULT_LEDGER_OUTPUT_CONSOLIDATION_THRESHOLD.html  constant.DEFAULT_OUTPUT_CONSOLIDATION_THRESHOLD.html  constant.MIN_DUST_ALLOWANCE_VALUE.html  constant.MIN_SYNC_INTERVAL.html  constant.PARALLEL_REQUESTS_AMOUNT.html  index.html  sidebar-items.js
docs/wallet_core/account/handle/: index.html  struct.AccountHandle.html
docs/wallet_core/account/operations/: index.html  sidebar-items.js
docs/wallet_core/account/types/: enum.AccountIdentifier.html  enum.InclusionState.html  enum.OutputKind.html  index.html  sidebar-items.js  struct.AccountBalance.html  struct.OutputData.html  struct.Transaction.html
docs/wallet_core/account_manager/: index.html  sidebar-items.js  struct.AccountManager.html
docs/wallet_core/account_manager/builder/: index.html  sidebar-items.js  struct.AccountManagerBuilder.html  struct.StorageOptions.html
docs/wallet_core/account_manager/operations/: index.html  sidebar-items.js
docs/wallet_core/client/: fn.client_instance.html  fn.convert_urls.html  fn.drop_all.html  fn.get_client.html  fn.instances.html  fn.set_client.html  index.html  sidebar-items.js  type.ClientInstance.html  type.ClientInstanceMap.html
docs/wallet_core/client/api/: enum.Api.html  index.html  sidebar-items.js
docs/wallet_core/client/node/: index.html  sidebar-items.js  struct.Node.html  struct.NodeAuth.html
docs/wallet_core/client/options/: fn.convert_urls.html  fn.default_local_pow.html  fn.default_node_sync_enabled.html  index.html  sidebar-items.js  struct.ClientOptions.html  struct.ClientOptionsBuilder.html
docs/wallet_core/error/: enum.AccountInitialiseRequiredField.html  enum.AddressBuildRequiredField.html  enum.Error.html  index.html
docs/wallet_core/events/: index.html  sidebar-items.js  static.EVENT_EMITTER.html  struct.EventEmitter.html  type.EventEmitterWrapper.html  type.Handler.html
docs/wallet_core/events/types/: enum.TransferProgressEvent.html  enum.WalletEvent.html  enum.WalletEventType.html  index.html  sidebar-items.js  struct.AddressConsolidationNeeded.html  struct.AddressData.html  struct.BalanceChangeEvent.html  struct.Event.html  struct.PreparedTransactionData.html  struct.TransactionIO.html  struct.TransactionInclusionEvent.html
docs/wallet_core/logger/: enum.LevelFilter.html  fn.init_logger.html  index.html  sidebar-items.js
docs/wallet_core/signing/: enum.Network.html  enum.SignerType.html  fn.default_signers.html  fn.get_signer.html  fn.set_signer.html  index.html  sidebar-items.js  static.SIGNERS_INSTANCE.html  static.SIGNER_INSTANCE.html  struct.GenerateAddressMetadata.html  struct.LedgerApp.html  struct.LedgerStatus.html  struct.SignMessageMetadata.html  struct.TransactionInput.html  trait.Signer.html  type.SignerHandle.html  type.Signers.html
docs/wallet_core/signing/ledger/: constant.HARDENED.html  constant.MAX_POOL_SIZE.html  index.html  struct.AddressIndexRecorder.html  struct.AddressPoolEntry.html  struct.LedgerNanoSigner.html
docs/wallet_core/signing/mnemonic/: fn.generate_address.html  fn.get_mnemonic_seed.html  fn.set_mnemonic.html  index.html  sidebar-items.js  static.MNEMONIC_SEED.html  (+1 more)
docs/wallet_core/storage/: fn.decrypt_record.html  fn.encrypt_record.html  index.html  sidebar-items.js  struct.Storage.html
examples/: accounts.rs  address_generation.rs  background_syncing.rs  events.rs  recover_accounts.rs  split_funds.rs  storage.rs  threads.rs  wallet.rs
src/: account_manager.rs  client.rs  error.rs  events.rs  lib.rs  logger.rs  serde.rs
src/account/: account_builder.rs  account_handle.rs  builder.rs  constants.rs  handle.rs  input_selection.rs  mod.rs  syncing.rs  transfer.rs  types.rs
src/account/operations/: address_generation.rs  balance_finder.rs  input_selection.rs  mod.rs  output_consolidation.rs  syncing.rs  transfer.rs
src/account/types/: address.rs  address_serde.rs  mod.rs
src/account_manager/: builder.rs  mod.rs
src/account_manager/operations/: account_recovery.rs  background_syncing.rs  get_account.rs  mod.rs
src/actor/: mod.rs
src/client/: api.rs  mod.rs  mqtt.rs  node.rs  options.rs
src/events/: mod.rs  types.rs
src/signing/: mnemonic.rs  mod.rs  types.rs
src/storage/: manager.rs  mod.rs
(+124 files in other folders)
