[package]
name = "wallet-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["macros", "sync", "time", "rt", "rt-multi-thread"] }
iota-client = { git = "https://github.com/iotaledger/iota.rs", rev = "5f8fd262526aa09e2f548b3711964ea8fc18bc0b", features = ["mqtt"] }
log = "0.4.14"
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
url = { version = "2.2.2", features = ["serde"] }
async-trait = "0.1.51"
getset = "0.1.1"

# storage
# rocksdb = { git="https://github.com/iotaledger/rust-rocksdb", rev = "70f2a53529ecc1853a2c025cec7f9d00bd50352c", default-features = false, features = ["lz4"] }

# stronghold
# iota_stronghold = "0.4.1"
# riker = "0.4"
# slog = "2.7"

# ledger hardware wallets
# iota-ledger = { git = "https://github.com/iotaledger/ledger.rs", rev = "8c239b13b80e169aaa19cde9cd825e8444be0973", optional = true  }


[features]
# default = [""]
# ledger-nano = ["iota-ledger"]
# ledger-nano-simulator = ["iota-ledger"]
# stronghold = []
# stronghold feature in storage or both as one?
# storage = []