[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# put patches on all dependencies and update only if older than 3 months for security reasons;
tokio = { version = "1.12.0", default_features = false }
iota-client = { git = "https://github.com/iotaledger/iota.rs", rev = "ff518b82e91f618fa90e51f844d20c60d3f557e1", default_features = false, features = ["async"] }
log = { version = "0.4.14", default_features = false }
once_cell = { version = "1.8.0", default_features = false, features = ["std"] }
serde = { version = "1.0.130", default_features = false, features = ["derive"] }
serde_json =  { version = "1.0.68", default_features = false }
thiserror =  { version = "1.0.29", default_features = false }
url = { version = "2.2.2", default_features = false, features = ["serde"] }
async-trait =  { version ="0.1.51", default_features = false }
getset =  { version = "0.1.1", default_features = false }
futures =  { version = "0.3.17", default_features = false }
iota-crypto = { version = "0.7.0", default_features = false, features = ["random", "sha", "pbkdf", "hmac", "bip39", "bip39-en", "chacha", "blake2b", "slip10"] }
hex =  { version = "0.4.3", default_features = false }

# storage
rocksdb = { git="https://github.com/iotaledger/rust-rocksdb", rev = "70f2a53529ecc1853a2c025cec7f9d00bd50352c", default-features = false, features = ["lz4"], optional = true }

# stronghold
# iota_stronghold = "0.4.1"
# riker = "0.4"
# slog = "2.7"

# ledger hardware wallets
iota-ledger = { git = "https://github.com/iotaledger/ledger.rs", rev = "8c239b13b80e169aaa19cde9cd825e8444be0973", optional = true  }


[features]
# only default for now, should later be replaced by stronghold since stronghold is more secure
default = ["mnemonic", "events", "storage"]
ledger-nano = ["iota-ledger"]
ledger-nano-simulator = ["iota-ledger"]
# stronghold = []
storage = ["rocksdb"]
# actor = []
events = []
mnemonic = []
